plugins/xpath/xpath-lang/testData/xpath/highlighting/missingArgument.xpath
<error descr="Missing argument for function 'document'">document</error>()